# trustrun

./: .gitignore  CLAUDE.md  DEV_PLAN.md  LICENSE  PRODUCT.md  README.md  pyproject.toml
src/trustrun/: __init__.py  config.py  resolve.py
src/trustrun/actions/: alert.py  base.py  block.py  kill.py
src/trustrun/capture/: base.py  pcap.py  psutil_.py  sniffer.py
src/trustrun/capture/platform/: linux.py  macos.py
src/trustrun/cli/: __init__.py  learn.py  run.py  scan.py  server.py  watch.py
src/trustrun/policy/: evaluator.py  learner.py  loader.py  models.py
src/trustrun/policy/presets/: aws.yaml  azure.yaml
src/trustrun/scanner/: engine.py  models.py  patterns.py
src/trustrun/scanner/languages/: generic.py  javascript.py  python.py
src/trustrun/session/: manager.py  models.py
src/trustrun/storage/: db.py  repos.py
src/trustrun/tui/: __init__.py  app.py  display.py  input.py  policy_mutator.py  state.py
src/trustrun/web/: app.py
src/trustrun/web/api/: live.py  policies.py  scans.py  sessions.py
src/trustrun/web/frontend/: index.html
tests/: conftest.py
tests/fixtures/: simple_policy.yaml  test_policy.yaml
tests/unit/: test_capture_psutil.py  test_cli.py  test_policy_evaluator.py  test_policy_loader.py  test_policy_models.py  test_policy_mutator.py  test_resolve.py  test_scanner.py  test_session_manager.py  test_sniffer.py  test_storage.py  test_tui_display.py  test_tui_state.py
